--- a/source/rails-commits/rails-commits/Base.lproj/Main.storyboard
+++ b/source/rails-commits/rails-commits/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,6 +15,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="84" id="HNh-Rv-i1a" customClass="commitCell" customModule="rails_commits" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="375" height="84"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HNh-Rv-i1a" id="U2j-NG-Q0g">
+                                    <frame key="frameInset" width="375" height="83"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xyr-BG-1nT">
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="commitMessage" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Gbl-Xq-I8h">
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="27" id="DFg-oD-zxg"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="88j-87-ITr">
+                                            <frame key="frameInset" minX="325" minY="60" width="52" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rMa-bS-CjS">
+                                            <frame key="frameInset" minX="329" minY="11" width="44" height="44"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <color key="backgroundColor" red="0.41790347459999999" green="1" blue="0.9467450181" alpha="1" colorSpace="calibratedRGB"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Gbl-Xq-I8h" secondAttribute="trailing" constant="60" id="Boq-xm-iwV"/>
+                                        <constraint firstItem="Gbl-Xq-I8h" firstAttribute="leading" secondItem="xyr-BG-1nT" secondAttribute="trailing" constant="14" id="MLu-Sx-tdu"/>
+                                        <constraint firstItem="xyr-BG-1nT" firstAttribute="centerY" secondItem="U2j-NG-Q0g" secondAttribute="centerY" id="aTM-LA-4L4"/>
+                                        <constraint firstItem="xyr-BG-1nT" firstAttribute="leading" secondItem="U2j-NG-Q0g" secondAttribute="leadingMargin" constant="7" id="lJa-aQ-CuQ"/>
+                                        <constraint firstItem="Gbl-Xq-I8h" firstAttribute="centerY" secondItem="U2j-NG-Q0g" secondAttribute="centerY" id="veB-wt-Amk"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="authorLabel" destination="88j-87-ITr" id="uaZ-Vr-xHG"/>
+                                    <outlet property="avatarView" destination="rMa-bS-CjS" id="Qhl-55-3EL"/>
+                                    <outlet property="messageTextView" destination="Gbl-Xq-I8h" id="db2-Jt-Wf1"/>
+                                    <outlet property="timeLabel" destination="xyr-BG-1nT" id="JCh-IY-nc8"/>
+                                    <segue destination="v58-Gc-TLa" kind="show" id="zAh-ki-5Qa"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="0in-5R-vQN" id="d2d-dl-GnG"/>
                             <outlet property="delegate" destination="0in-5R-vQN" id="rqw-kN-KpR"/>
@@ -28,6 +80,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dwp-xO-I54" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-471" y="72"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="KpX-Ni-7PP">
+            <objects>
+                <viewController id="v58-Gc-TLa" customClass="WebViewController" customModule="rails_commits" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mJl-Pg-smM"/>
+                        <viewControllerLayoutGuide type="bottom" id="xfi-tJ-xLQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4LE-Nl-wTa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a9k-1R-40G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="481" y="72"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="LJu-T5-W8n">
