--- a/StrivrTest/Base.lproj/Main.storyboard
+++ b/StrivrTest/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="92" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Mnn-Fw-kf9" id="gzG-W2-mTl">
-                                    <frame key="frameInset" width="375" height="99"/>
+                                    <frame key="frameInset" width="375" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -27,7 +28,7 @@
                                 <rect key="frame" x="0.0" y="192" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uzZ-FE-xWP" id="Pqf-WN-eVw">
-                                    <frame key="frameInset" width="375" height="99"/>
+                                    <frame key="frameInset" width="375" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -35,7 +36,7 @@
                                 <rect key="frame" x="0.0" y="292" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MHL-Qv-kqM" id="827-YR-MZo">
-                                    <frame key="frameInset" width="375" height="99"/>
+                                    <frame key="frameInset" width="375" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -43,7 +44,7 @@
                                 <rect key="frame" x="0.0" y="392" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6bj-og-yvl" id="dsD-qF-EWe">
-                                    <frame key="frameInset" width="375" height="99"/>
+                                    <frame key="frameInset" width="375" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -51,7 +52,7 @@
                                 <rect key="frame" x="0.0" y="492" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LKj-Pn-gJa" id="Nxc-Ph-yM9">
-                                    <frame key="frameInset" width="375" height="99"/>
+                                    <frame key="frameInset" width="375" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -61,11 +62,88 @@
                             <outlet property="delegate" destination="6V7-mV-yQf" id="Tit-Np-Ofx"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="Nm7-wn-Dab"/>
+                    <navigationItem key="navigationItem" id="Nm7-wn-Dab">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="B3J-cF-ZDZ"/>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="Pbg-W8-krS" kind="show" identifier="goToWebView" id="XWK-7P-whA"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sf3-ms-EDA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="687.20000000000005" y="4.9475262368815596"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="Rzc-Ql-23t">
+            <objects>
+                <viewController id="Pbg-W8-krS" customClass="WebViewController" customModule="StrivrTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2ts-uO-b22"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZPK-RY-OME"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="56h-Ob-10c">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="81J-5W-1dh">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="U0h-5k-zn9"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem id="IiY-OC-qJF">
+                                        <leftBarButtonItems>
+                                            <barButtonItem title="&lt;" id="HfF-B6-O48">
+                                                <connections>
+                                                    <action selector="back:" destination="Pbg-W8-krS" id="1Wf-lI-64A"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem title="&gt;" id="6tg-Th-yon">
+                                                <connections>
+                                                    <action selector="forward:" destination="Pbg-W8-krS" id="JfK-HQ-Lzc"/>
+                                                </connections>
+                                            </barButtonItem>
+                                        </leftBarButtonItems>
+                                        <rightBarButtonItems>
+                                            <barButtonItem systemItem="refresh" id="SZt-x3-fNi">
+                                                <connections>
+                                                    <action selector="refresh:" destination="Pbg-W8-krS" id="xU3-k0-BpC"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem systemItem="stop" id="Mnm-6c-rSD">
+                                                <connections>
+                                                    <action selector="stop:" destination="Pbg-W8-krS" id="ZJU-cq-7cv"/>
+                                                </connections>
+                                            </barButtonItem>
+                                        </rightBarButtonItems>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oAE-cd-0Cc">
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="oAE-cd-0Cc" firstAttribute="top" secondItem="2ts-uO-b22" secondAttribute="bottom" id="2P0-dh-DPq"/>
+                            <constraint firstItem="ZPK-RY-OME" firstAttribute="top" secondItem="81J-5W-1dh" secondAttribute="bottom" id="Hr5-b0-T1x"/>
+                            <constraint firstAttribute="trailing" secondItem="oAE-cd-0Cc" secondAttribute="trailing" id="YQD-LW-gnO"/>
+                            <constraint firstItem="oAE-cd-0Cc" firstAttribute="leading" secondItem="56h-Ob-10c" secondAttribute="leading" id="mlp-AF-oN5"/>
+                            <constraint firstItem="81J-5W-1dh" firstAttribute="leading" secondItem="56h-Ob-10c" secondAttribute="leading" id="ns7-aY-Cnx"/>
+                            <constraint firstItem="81J-5W-1dh" firstAttribute="top" secondItem="oAE-cd-0Cc" secondAttribute="bottom" id="tbF-M9-ehN"/>
+                            <constraint firstAttribute="trailing" secondItem="81J-5W-1dh" secondAttribute="trailing" id="u5L-JJ-SKu"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="5KP-DC-sB6">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="VWf-vL-Nys"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="navigationBar" destination="IiY-OC-qJF" id="QGA-Tc-lHf"/>
+                        <outlet property="webView" destination="oAE-cd-0Cc" id="AfX-97-Urn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZaG-hB-aXu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1397.5999999999999" y="4.9475262368815596"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1jn-Qc-MlL">
