--- a/source/rails-commits/rails-commits/authorHeaderView.xib
+++ b/source/rails-commits/rails-commits/authorHeaderView.xib
@@ -3,40 +3,42 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="authorHeaderView" customModule="rails_commits" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="84"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="authorLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3iP-PM-7dC">
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1DR-Td-WgH">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1DR-Td-WgH">
                     <constraints>
-                        <constraint firstAttribute="width" constant="44" id="tkS-z5-IV0"/>
+                        <constraint firstAttribute="width" secondItem="1DR-Td-WgH" secondAttribute="height" multiplier="1:1" id="WPg-ha-nt7"/>
                     </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="1DR-Td-WgH" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="100" id="34D-am-Bzy"/>
                 <constraint firstItem="1DR-Td-WgH" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="50k-yd-rGb"/>
+                <constraint firstItem="1DR-Td-WgH" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.75" id="JB1-z6-Jq1"/>
                 <constraint firstItem="3iP-PM-7dC" firstAttribute="leading" secondItem="1DR-Td-WgH" secondAttribute="trailing" constant="106" id="MUQ-fm-GH0"/>
                 <constraint firstItem="1DR-Td-WgH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="jAU-To-NM5"/>
-                <constraint firstItem="3iP-PM-7dC" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="112" id="kaI-ko-e2e"/>
+                <constraint firstItem="3iP-PM-7dC" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="z1K-jk-Jvy"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="authorLabel" destination="3iP-PM-7dC" id="Wg0-nE-AgM"/>
                 <outlet property="avatarView" destination="1DR-Td-WgH" id="W3j-my-r8w"/>
             </connections>
-            <point key="canvasLocation" x="21" y="-302"/>
+            <point key="canvasLocation" x="-42.5" y="-543"/>
         </view>
     </objects>
 </document>
