--- a/source/rails-commits/rails-commits/Base.lproj/Main.storyboard
+++ b/source/rails-commits/rails-commits/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Rails Commits-->
         <scene sceneID="oTn-04-nbw">
             <objects>
                 <tableViewController id="0in-5R-vQN" customClass="ViewController" customModule="rails_commits" customModuleProvider="target" sceneMemberID="viewController">
@@ -22,32 +22,35 @@
                                 <rect key="frame" x="0.0" y="92" width="375" height="84"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HNh-Rv-i1a" id="U2j-NG-Q0g">
-                                    <frame key="frameInset" width="375" height="84"/>
+                                    <frame key="frameInset" width="375" height="83"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xyr-BG-1nT">
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" editable="NO" text="commitMessage" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Gbl-Xq-I8h">
+                                        <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="-10" translatesAutoresizingMaskIntoConstraints="NO" id="NXp-QM-Eo2">
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xyr-BG-1nT">
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o7A-Mp-a5j">
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="o7A-Mp-a5j" firstAttribute="width" secondItem="NXp-QM-Eo2" secondAttribute="width" id="CSR-1r-DZq"/>
+                                                <constraint firstItem="xyr-BG-1nT" firstAttribute="width" secondItem="NXp-QM-Eo2" secondAttribute="width" id="cK5-V5-L5M"/>
+                                            </constraints>
+                                        </stackView>
+                                        <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" editable="NO" text="commitMessage" translatesAutoresizingMaskIntoConstraints="NO" id="Gbl-Xq-I8h">
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <accessibility key="accessibilityConfiguration">
                                                 <accessibilityTraits key="traits" notEnabled="YES"/>
                                             </accessibility>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="27" id="DFg-oD-zxg"/>
-                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                         </textView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="88j-87-ITr">
-                                            <frame key="frameInset" minX="325" minY="60" width="52" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rMa-bS-CjS">
                                             <color key="backgroundColor" red="0.41790347459999999" green="1" blue="0.9467450181" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
@@ -56,19 +59,22 @@
                                         </imageView>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="NXp-QM-Eo2" firstAttribute="leading" secondItem="U2j-NG-Q0g" secondAttribute="leadingMargin" id="4s9-eg-6LE"/>
                                         <constraint firstItem="rMa-bS-CjS" firstAttribute="centerY" secondItem="U2j-NG-Q0g" secondAttribute="centerY" id="5vc-TS-J1d"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="Gbl-Xq-I8h" secondAttribute="trailing" constant="60" id="Boq-xm-iwV"/>
                                         <constraint firstItem="rMa-bS-CjS" firstAttribute="height" secondItem="U2j-NG-Q0g" secondAttribute="height" multiplier="0.75" id="F3S-ST-JhL"/>
-                                        <constraint firstItem="Gbl-Xq-I8h" firstAttribute="leading" secondItem="xyr-BG-1nT" secondAttribute="trailing" constant="14" id="MLu-Sx-tdu"/>
-                                        <constraint firstItem="xyr-BG-1nT" firstAttribute="centerY" secondItem="U2j-NG-Q0g" secondAttribute="centerY" id="aTM-LA-4L4"/>
-                                        <constraint firstItem="xyr-BG-1nT" firstAttribute="leading" secondItem="U2j-NG-Q0g" secondAttribute="leadingMargin" constant="7" id="lJa-aQ-CuQ"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="rMa-bS-CjS" secondAttribute="trailing" constant="-6" id="nAp-d2-7BE"/>
+                                        <constraint firstItem="NXp-QM-Eo2" firstAttribute="height" secondItem="U2j-NG-Q0g" secondAttribute="height" id="ODv-c9-hlf"/>
+                                        <constraint firstItem="Gbl-Xq-I8h" firstAttribute="leading" secondItem="NXp-QM-Eo2" secondAttribute="trailing" constant="20" id="Zhk-b2-EzJ"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="rMa-bS-CjS" secondAttribute="trailing" id="nAp-d2-7BE"/>
+                                        <constraint firstItem="NXp-QM-Eo2" firstAttribute="centerY" secondItem="U2j-NG-Q0g" secondAttribute="centerY" id="tOd-xF-hpu"/>
                                         <constraint firstItem="Gbl-Xq-I8h" firstAttribute="centerY" secondItem="U2j-NG-Q0g" secondAttribute="centerY" id="veB-wt-Amk"/>
+                                        <constraint firstItem="NXp-QM-Eo2" firstAttribute="width" secondItem="U2j-NG-Q0g" secondAttribute="width" multiplier="0.2" id="yDx-2Y-caQ"/>
+                                        <constraint firstItem="Gbl-Xq-I8h" firstAttribute="height" secondItem="U2j-NG-Q0g" secondAttribute="height" id="yqr-AR-reV"/>
+                                        <constraint firstItem="rMa-bS-CjS" firstAttribute="leading" secondItem="Gbl-Xq-I8h" secondAttribute="trailing" constant="20" id="zEY-Ld-Pjw"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="authorLabel" destination="88j-87-ITr" id="uaZ-Vr-xHG"/>
                                     <outlet property="avatarView" destination="rMa-bS-CjS" id="Qhl-55-3EL"/>
+                                    <outlet property="dateLabel" destination="o7A-Mp-a5j" id="8ky-uT-D8S"/>
                                     <outlet property="messageTextView" destination="Gbl-Xq-I8h" id="db2-Jt-Wf1"/>
                                     <outlet property="timeLabel" destination="xyr-BG-1nT" id="JCh-IY-nc8"/>
                                     <segue destination="v58-Gc-TLa" kind="show" id="zAh-ki-5Qa"/>
@@ -81,9 +87,7 @@
                         </connections>
                     </tableView>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="1uP-lG-XC9">
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="o84-5m-Olu"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Rails Commits" id="1uP-lG-XC9"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dwp-xO-I54" userLabel="First Responder" sceneMemberID="firstResponder"/>
